--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,7 +29,7 @@ body {
 
 .parallax {
   /* The image used */
-  background-image: url('https://scontent.fkkc4-1.fna.fbcdn.net/v/t39.30808-6/415498463_1078650550145705_1341288852553633566_n.jpg?stp=dst-jpg_p843x403&_nc_cat=109&ccb=1-7&_nc_sid=3635dc&_nc_eui2=AeH8MXzZL-GTkkUBb6oD4LJOuxcET3eUpS27FwRPd5SlLX_HffSOT3uhDw5Vg_uqs0s-aU-eGmAT4eE655Ej2mWa&_nc_ohc=_Csfg_jg9kMAX_CgEL6&_nc_ht=scontent.fkkc4-1.fna&oh=00_AfDlRYEFAbLML4Fv9nyer7JIzr65H9K0szX5M2uvkTIfSA&oe=6596E569');
+  background-image: url('https://th.bing.com/th/id/R.7cdf60c7cd8b2b14995694dcd7c99e06?rik=3obl%2fhI6QdNIMA&riu=http%3a%2f%2fthewowstyle.com%2fwp-content%2fuploads%2f2015%2f01%2ffree-beautiful-place-wallpaper-hd-173.jpg&ehk=92RRpT4hrYheMDBZkK0HhLLXx9%2fGDjnafeDmbgjE1K8%3d&risl=1&pid=ImgRaw&r=0');
 
   /* Full height */
   height: 100%; 
