add product redecorated

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,3 +68,13 @@ body {
     background-attachment: scroll;
   }
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number]{
+  -moz-appearance: textfield;
+}
